--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,10 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
+    dataBinding {
+        enabled = true
+    }
+
 
     defaultConfig {
         applicationId "com.app.shortoftheweek"
