--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <!-- Splash Screen-->
         <activity
             android:name=".activities.SplashScreen"
@@ -28,9 +28,6 @@
         </activity>
         <!-- Main activity -->
         <activity android:name=".activities.MainActivity" >
-        </activity>
-        <!-- Film activity -->
-        <activity android:name=".FilmActivity" >
         </activity>
     </application>
 
