--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,14 +24,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.+'
     compile 'com.vimeo.networking:vimeo-networking:1.1.0'
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'de.greenrobot:eventbus:2.4.0'
+    compile 'com.github.ed-george:AndroidVimeoExtractor:1.1.1'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:support-v4:22.0.0'
-
 }
