--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.github.ed-george:AndroidVimeoExtractor:1.1.1'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:support-v4:22.0.0'
+    compile 'org.jsoup:jsoup:1.10.2'
 }
