--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <!-- Splash Screen-->
         <activity
             android:name=".activities.SplashScreen"
@@ -27,9 +27,12 @@
             </intent-filter>
         </activity>
         <!-- Main activity -->
-        <activity android:name=".activities.MainActivity" >
+        <activity android:name=".activities.MainActivity"
+            android:configChanges="orientation|screenSize">
         </activity>
-        <activity android:name=".activities.FilmActivity" >
+        <activity android:name=".activities.FilmActivity"
+            android:configChanges="orientation|screenSize"
+            android:hardwareAccelerated="true">
         </activity>
     </application>
 
