--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.app.shortoftheweek" >
+    package="com.app.vimeoshorts" >
 
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
 
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".ShortOfTheWeek"
+        android:name="com.app.vimeoshorts.VimeoShorts"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -19,7 +19,7 @@
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <!-- Splash Screen-->
         <activity
-            android:name=".activities.SplashScreen"
+            android:name="com.app.vimeoshorts.activities.SplashScreen"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,10 +27,10 @@
             </intent-filter>
         </activity>
         <!-- Main activity -->
-        <activity android:name=".activities.MainActivity"
+        <activity android:name="com.app.vimeoshorts.activities.MainActivity"
             android:configChanges="orientation|screenSize">
         </activity>
-        <activity android:name=".activities.FilmActivity"
+        <activity android:name="com.app.vimeoshorts.activities.FilmActivity"
             android:configChanges="orientation|screenSize"
             android:hardwareAccelerated="true">
         </activity>
